--- a/02 Fundamentos Front-End/01 Introdução HTML5 e CSS3/Projeto - Site Pessoal/src/styles/style.css
+++ b/02 Fundamentos Front-End/01 Introdução HTML5 e CSS3/Projeto - Site Pessoal/src/styles/style.css
@@ -1,16 +1,126 @@
-/* *{
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-} */
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	gap: 2em;
+	background-color: #ffffff;
+}
+
+header.header-page {
+	background-color: #125e78;
+     color: #fff;
+     font-style: italic;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1em;
+	box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.416);
+}
+
+header > .author-info {
+	display: flex;
+     flex-wrap: wrap;
+	align-items: center;
+	gap: 5px;
+	padding: 1em;
+}
 
 .author-image {
-     width: 100px;
-     height: 100px;
-     border-radius: 100%;
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+     border: 1px solid white;
+}
+
+main {
+	padding: 0em 3em;
+	display: flex;
+	flex-direction: column;
+	gap: 2em;
+}
+
+.other-projects h2 {
+	margin-bottom: 0.5em;
+}
+
+.other-projects > ul {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 5px;
+     justify-content: space-around;
+}
+
+.other-projects a {
+	color: rgb(17, 17, 97);
+	text-decoration: none;
+}
+
+.other-projects a:hover {
+	color: rgb(5, 5, 67);
+	text-decoration: underline;
+}
+
+.post {
+	display: flex;
+	flex-direction: column;
+	gap: 1em;
+	border: 1px solid rgb(61, 100, 100);
+	border-radius: 10px;
+	padding: 1em;
+}
+
+.post figure {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .html-code {
-     width: 800px;
-     height: 400px;
+     width: auto;
+     height: auto;
+	max-width: 800px;
+	max-height: 400px;
+}
+
+@media screen and (max-width: 1000px) {
+     .html-code {
+          width: 200px;
+          height: 100px;
+     }
+}
+
+footer {
+	color: #fff;
+	font-family: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
+	background-color: #000;
+	display: flex;
+	justify-content: space-around;
+	padding: 1em;
+	margin-top: 1em;
+	box-shadow: 3px 3px 6px 6px rgba(0, 0, 0, 0.416);
+}
+
+.github-logo {
+	width: 30px;
+	height: 30px;
+}
+
+.github-link {
+	display: flex;
+	align-items: center;
+	color: #fff;
+	gap: 3px;
+	text-decoration: none;
+	font-family: "Franklin Gothic", "Arial Narrow", Arial, sans-serif;
+}
+
+.github-link:hover {
+	text-decoration: underline;
 }
