modified:   "02 Fundamentos Front-End/07 Introdu\303\247\303\243o ao Desenvolvimento Web com JavaScript/Pokedex/index.html" 	modified:   "02 Fundamentos Front-End/07 Introdu\303\247\303\243o ao Desenvolvimento Web com JavaScript/Pokedex/src/css/global.css" 	new file:   "02 Fundamentos Front-End/07 Introdu\303\247\303\243o ao Desenvolvimento Web com JavaScript/Pokedex/src/css/media-queries.css" 	new file:   "02 Fundamentos Front-End/07 Introdu\303\247\303\243o ao Desenvolvimento Web com JavaScript/Pokedex/src/css/pokedex.css"

--- a/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/src/css/global.css
+++ b/02 Fundamentos Front-End/07 Introdução ao Desenvolvimento Web com JavaScript/Pokedex/src/css/global.css
@@ -1,56 +1,23 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap");
+@import url('./media-queries.css');
+@import url('./pokedex.css');
 
 * {
 	font-family: "Roboto", sans-serif;
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #f6f8fc;
+}
+
 .content {
 	padding: 1em;
+     width: 100vw;
+	height: 100vh;
 }
 
 .content > header > h1 {
 	margin: 0;
-}
-
-ol.pokemon {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-ol.pokemon > li {
-	margin: 0.5em;
-	padding: 1.5em;
-	border-radius: 1em;
-	height: 220px;
-	color: rgb(247, 245, 245);
-	display: flex;
-	flex-direction: column;
-}
-
-.grass {
-	background-color: #1dcaaa;
-}
-
-.fire {
-	background-color: #ff6265;
-}
-
-img {
-	max-width: 100%;
-	height: 100px;
-}
-
-.number {
-     text-align: end;
-}
-
-.types {
-     margin: 0;
-     padding: 0;
-     list-style: none;
 }
